ssl_manager_openssl.cpp does not check if all supported protocols are disabled

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.2.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Server Security
    • Fully Compatible
    • ALL
    • Security 2025-03-31
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      src/mongo/util/net/ssl_manager_windows.cpp:
      cred->grbitEnabledProtocols = supportedProtocols;
      if (supportedProtocols == 0) {
      return

      {ErrorCodes::InvalidSSLConfiguration, "All supported TLS protocols have been disabled."}

      ;
      }

      src/mongo/util/net/ssl_manager_apple.cpp
      if (!tls10 && !tls11 && !tls12) {
      return

      {ErrorCodes::InvalidSSLConfiguration, "All valid TLS modes disabled"}

      ;
      }

      src/mongo/util/net/ssl_manager_openssl.cpp does not seem to have this check

            Assignee:
            Annette Chau
            Reporter:
            Tianyu Wang
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: