SERVER-98253 ssl_manager_openssl.cpp does not check if all supported protocols are disabled (#33881)

Co-authored-by: Annette Chau <annette.chau@mongodb.com>
GitOrigin-RevId: 3ab0701877443b15acb01dbaf191798476b485ab